...
            <objects>
                <viewController id="dqX-di-ww0" customClass="UploadImageViewController" customModule="FinalProject" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="xOs-iJ-5ON">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XvY-gQ-Ztz">
                                <rect key="frame" x="20" y="80.666666666666657" width="353" height="147"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="Rdc-6R-fjI"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IL4-6Y-ltX">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHD-zP-bWT">
                                <rect key="frame" x="20" y="309" width="353" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="ve0-Ug-58W"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Take a Picture"/>
                                <connections>
                                    <action selector="takeAPictureAction:" destination="dqX-di-ww0" eventType="touchUpInside" id="ffp-5D-Ily"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaS-aY-0fw">
                                <rect key="frame" x="20" y="369" width="353" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="7gL-Qo-RGk"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Upload Image"/>
                                <connections>
                                    <action selector="uploadImageAction:" destination="dqX-di-ww0" eventType="touchUpInside" id="wOZ-jl-j5P"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="3o6-66-lD7"/>
...
                            <constraint firstItem="R9r-1M-XFh" firstAttribute="leading" secondItem="LIb-Ef-oA9" secondAttribute="leading" id="Cfn-Kn-nVa"/>
                            <constraint firstItem="LIb-Ef-oA9" firstAttribute="bottom" secondItem="R9r-1M-XFh" secondAttribute="bottom" id="O1K-lo-oSu"/>
                            <constraint firstItem="R9r-1M-XFh" firstAttribute="top" secondItem="LIb-Ef-oA9" secondAttribute="top" id="S3u-p3-IOy"/>
                            <constraint firstItem="LIb-Ef-oA9" firstAttribute="trailing" secondItem="R9r-1M-XFh" secondAttribute="trailing" id="VW3-H3-sba"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="4TS-SW-R9h"/>
                    <connections>
                        <outlet property="tblView" destination="R9r-1M-XFh" id="99D-0X-EFz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GnX-YI-YJ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
